@@ -6,6 +6,7 @@ Version 1.0.1
 -----------------------------------
 [improved] styling of license settings page
 [added] dismiss links to admin notices
+[removed] site logo setting for sites using WP 4.5 or higher
 
 Version 1.0
 -----------------------------------
